--- a/lab7-ASM/.vscode/launch.json
+++ b/lab7-ASM/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "//dest.feec.vutbr.cz/home/stud/240235/DE2/lab7-ASM/.pio/build/uno/firmware.elf",
+            "executable": "p:/DE2/lab7-asm/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
             "toolchainBinDir": "C:/Users/240235/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "//dest.feec.vutbr.cz/home/stud/240235/DE2/lab7-ASM/.pio/build/uno/firmware.elf",
+            "executable": "p:/DE2/lab7-asm/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
             "toolchainBinDir": "C:/Users/240235/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "//dest.feec.vutbr.cz/home/stud/240235/DE2/lab7-ASM/.pio/build/uno/firmware.elf",
+            "executable": "p:/DE2/lab7-asm/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
             "toolchainBinDir": "C:/Users/240235/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
